Fixed collapsed navbar icon color for better visibility

--- a/static/less/navbar.less
+++ b/static/less/navbar.less
@@ -280,7 +280,7 @@
   display: block;
   width: 18px;
   height: 2px;
-  background-color: #f5f5f5;
+  background-color: @gray;
   .border-radius(1px);
   .box-shadow(0 1px 0 rgba(0,0,0,.25));
 }
